# fastapi-crud

./: ACTION.md  N-gram.py  README.md  Untitled  main.py  pyproject.toml
.hypothesis/constants/: 046c8e9ea09652e0
migrations/: env.py
migrations/versions/: 0f94991a6183_add_roles_to_users.py  33214b8ee682_add_password_hash.py  4b7ba80584cd_init.py  78ee900c5a2e_add_review_table.py  8d24ca4f23b9_add_book_user_uid.py
src/: __init__.py  celery_tasks.py  config.py  errors.py  mail.py  middleware.py
src/auth/: dependencies.py  routes.py  schemas.py  service.py  utils.py
src/books/: routes.py  schemas.py  service.py
src/db/: main.py  models.py  redis.py
src/reviews/: routes.py  schemas.py  service.py
src/tests/: conftest.py  test_auth.py
